--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = nordicnrf52
 board = nano33ble
 framework = arduino
+lib_deps = 
+	kosme/arduinoFFT@^1.5.6
+	adafruit/Adafruit NeoPixel@^1.8.7
